vmargs for HttpURLConnection read and connect timeout